# macro-scope

./: .env.example  .geminiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: review-pr.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  epic.md  slice.md
.github/workflows/: ci.yml  daily.yml  deploy-note.md  ingest.yml  weekly.yml
.streamlit/: config.toml
config/: assets.yml  settings.py
dashboard/: app.py  data.py  snapshot_boot.py  theme.py
dashboard/components/: __init__.py  charts.py  kpi.py  utils.py
data/: research_forecast_sweep.csv  research_sweep.csv
data/public/: _manifest.json  dim_asset.parquet  fct_asset_daily.parquet  fct_crypto_intraday.parquet  fct_macro_indicator.parquet  fct_market_macro.parquet  fct_performance_attribution.parquet  fct_portfolio_attribution.parquet  fct_portfolio_btc_effect.parquet  fct_portfolio_ml_gate.parquet  fct_portfolio_regime_performance.parquet  fct_portfolio_returns.parquet  fct_portfolio_strategy_pairs.parquet  fct_portfolio_strategy_stats.parquet  fct_recession_risk.parquet  fct_regime.parquet  market_brief.parquet  ml_forecast.parquet  model_metrics.parquet  portfolio_attribution.parquet  portfolio_btc_effect.parquet  (+4 more)
docs/: GO_LIVE_PLAN.md  ML_FORECAST_EXPERIMENT_LOG.md  RETURN_FORECAST_RESEARCH.md  REVIEW_GUIDE.md  RUNBOOK.md  architecture.md  research_forecast_sweep.md
scripts/: dashboard_app_smoke.py  dashboard_smoke.py  live_refresh.sh  public_import_smoke.py
tests/: conftest.py  test_ai_narrative.py  test_cli_healthcheck.py  test_cli_ingest.py  test_cli_ml_gate.py  test_cli_snapshot.py  test_coverage_boost.py  test_dashboard_app.py  test_dashboard_charts.py  test_dashboard_cross_asset.py  test_dashboard_data.py  test_dashboard_snapshot_read.py  test_dashboard_theme.py  test_db_connect.py  test_features.py  test_features_vol.py  test_forecast_leakage.py  test_forecast_panel.py  test_holdout.py  test_http.py  test_ingestion_coingecko.py  test_ingestion_fred.py  test_ingestion_yahoo.py  test_kpi.py  test_llm.py  test_loader.py  test_logging.py  test_logging_secret_leak.py  test_ml_edge_cases.py  test_ml_phase1_canonical.py  test_ml_research.py  test_ml_snapshot_roundtrip.py  test_pipeline_offline.py  test_portfolio_attribution.py  test_portfolio_backtest.py  test_portfolio_compute.py  test_portfolio_engine.py  test_portfolio_metrics.py  test_portfolio_mvo_ml.py  test_portfolio_stats.py  (+14 more)
transform/: dbt_project.yml  profiles.yml
(+86 files in other folders)
