[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markets-macro-intelligence"
version = "0.1.0"
description = "Zero-cost, code-first markets + macro data platform: ingestion, dbt, ML, GenAI, Streamlit BI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — All Rights Reserved (see LICENSE)" }
authors = [{ name = "mathsisbest" }]
keywords = ["data-engineering", "analytics-engineering", "dbt", "duckdb", "streamlit", "ml", "genai"]

# Core deps — kept lean; heavier concerns live in optional groups below.
dependencies = [
    "duckdb>=1.0,<1.5.4",    # MotherDuck supports only duckdb <=1.5.3; newer breaks the md: extension (caught on first live ingest)
    "pandas>=2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",          # retry/backoff for free-tier API calls
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4", "numpy>=1.26", "lightgbm>=4.0"]
dashboard = ["streamlit>=1.34", "plotly>=5.20"]
transform = ["dbt-core>=1.7", "dbt-duckdb>=1.7"]
portfolio = ["scipy>=1.11", "scikit-learn>=1.4"]   # scipy: solvers; sklearn: Ledoit-Wolf shrinkage
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "types-PyYAML",
    "respx>=0.21",            # mock httpx in tests
]
all = [
    "markets-macro-intelligence[ml,dashboard,transform,portfolio,dev]",
]

[project.scripts]
mmi = "mmi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mmi = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling config
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "dashboard", "config"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PD"]
ignore = ["C408"]  # dict() is idiomatic in Plotly figure specs

[tool.ruff.lint.isort]
known-first-party = ["mmi"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src", "config"]

[tool.pytest.ini_options]
addopts = "-q --cov=mmi --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]
pythonpath = ["src", "."]  # "." so tests can import the top-level `dashboard` package
